--- a/taco-manager/build.gradle
+++ b/taco-manager/build.gradle
@@ -11,16 +11,22 @@ sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+    //added for swagger 3.0 snapshot that handles reactive endpoint swagger doc
+    maven {
+        url 'http://repo.spring.io/milestone'
+    }
 }
 
 dependencies {
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-artemis'
     implementation 'org.springframework.boot:reactor-core'
-    compile "io.springfox:springfox-swagger2:2.9.2"
+    implementation 'io.springfox:springfox-swagger2:3.0.0-SNAPSHOT'
+    implementation 'io.springfox:springfox-spring-webflux:3.0.0-SNAPSHOT'
+    implementation 'io.springfox:springfox-swagger-ui:3.0.0-SNAPSHOT'
     implementation 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
